issue in profile image alignment

--- a/css/style.css
+++ b/css/style.css
@@ -117,28 +117,61 @@ ul.socialicons{
     left: -7px;
 }
 
+.pulse-button{
+    position: relative;
+    width: 35px;
+    height: 35px;
+    line-height: 15px;
+    border: none;
+    box-shadow: 0 0 0 0 rgb(101, 100, 100);
+    background-color: #cf455c;
+    cursor: pointer;
+    color: white;
+    font-size: 20px;
+}
 
+.menu{
+    height: 100px;
+    background-color: #ededed;
+    position: relative;
+    padding-left: 130px;
+    padding-right: 130px;
+}
 
+.tabs{
+    height: 117px;
+    position: absolute;
+    margin-top: -14px;
+    z-index: 100;
+}
 
+.tabs li > a{
+    padding-top: 28px;
+    width: 155px;
+    display: inline-block;
+    background-repeat: no-repeat;
+    font-size: 15px;
+    color: #b9b9b9;
+    text-align: center;
+    font-weight: 580;
+    text-transform: uppercase;
+    font-family: 'Roboto condensed', sans-serif;
+    line-height: 35px;
+    text-decoration: none;
+}
 
+.tabs li.active{
+    background: url(../img/tab-hover.png) no-repeat;
+}
 
+.tabs li.active a{
+    color: #cf455c;
 
+}
 
+.tabs li > a i{
+    font-size: 45px;
+    display: block;
+    margin-bottom: 5px;
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+}
